--- a/spring-boot-learn-filter-demo/pom.xml
+++ b/spring-boot-learn-filter-demo/pom.xml
@@ -14,18 +14,23 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.iemylife.iot</groupId>
+            <artifactId>webtoolkit</artifactId>
+            <version>0.4.0</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-web</artifactId>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.iemylife.iot</groupId>
-            <artifactId>logging</artifactId>
-            <version>0.2.4</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.iemylife.iot</groupId>-->
+            <!--<artifactId>logging</artifactId>-->
+            <!--<version>0.2.4</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 
