--- a/elasticsearch-client-demo/src/main/resources/elasticsearch.properties
+++ b/elasticsearch-client-demo/src/main/resources/elasticsearch.properties
@@ -1,3 +1,3 @@
 #host=192.168.31.137
-host=192.168.63.128
-port=9300
+elasticsearch.transport.client.host=192.168.63.128
+elasticsearch.transport.client.port=9300
