--- a/spring-boot-learn-filter-demo/pom.xml
+++ b/spring-boot-learn-filter-demo/pom.xml
@@ -31,6 +31,10 @@
             <!--<artifactId>logging</artifactId>-->
             <!--<version>0.2.4</version>-->
         <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
     </dependencies>
 
 
