添加micro-service-users应用

--- a/micro-service-users/src/main/resources/application.properties
+++ b/micro-service-users/src/main/resources/application.properties
@@ -1,36 +1,33 @@
 spring.application.name=users-v0
 server.port=7878
 
-#mysql Êı¾İ¿â
+#mysql
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.12.21:3306/db_eshop
+spring.datasource.url=jdbc:mysql://192.168.63.128:3306/db_eshop
 spring.datasource.username=root
 spring.datasource.password=root
 
 mybatis.mapper-locations=classpath:micro/service/users/mapper/*.xml
 mybatis.type-aliases-package=micro.service.users.domain
 
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
 
-#spring.datasource.url=jdbc:h2:mem:test  £¬ÅäÖÃh2Êı¾İ¿âµÄÁ¬½ÓµØÖ·
-#spring.datasource.driver-class-name=org.h2.Driver£¬ÅäÖÃJDBC Driver
-#spring.datasource.username=root£¬ÅäÖÃÊı¾İ¿âÓÃ»§Ãû
-#spring.datasource.password=123456£¬ÅäÖÃÊı¾İ¿âÃÜÂë
+#spring.datasource.url=jdbc:h2:mem:test  ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½h2ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½Óµï¿½Ö·
+#spring.datasource.driver-class-name=org.h2.Driverï¿½ï¿½ï¿½ï¿½ï¿½ï¿½JDBC Driver
+#spring.datasource.username=rootï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ¿ï¿½ï¿½Ã»ï¿½ï¿½ï¿½
+#spring.datasource.password=123456ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½
 
 #spring.datasource.schema=classpath:import.sql
 
-##Êı¾İ¿âÁ¬½Ó
+##ï¿½ï¿½ï¿½İ¿ï¿½ï¿½ï¿½ï¿½ï¿½
 #pagehelper.helperDialect=mysql
-##¿ÉÒÔÓÃÒ³ÂëºÍÒ³Ãæ´óĞ¡Á½¸ö²ÎÊı½øĞĞ·ÖÒ³
+##ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ò³ï¿½ï¿½ï¿½Ò³ï¿½ï¿½ï¿½Ğ¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ğ·ï¿½Ò³
 #pagehelper.offsetAsPageNum=false
-##Ê¹ÓÃ RowBounds ·ÖÒ³»á½øĞĞ count ²éÑ¯
+##Ê¹ï¿½ï¿½ RowBounds ï¿½ï¿½Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ count ï¿½ï¿½Ñ¯
 #pagehelper.rowBoundsWithCount=false
-##Èç¹û pageSize=0 »òÕß RowBounds.limit = 0 ¾Í»á²éÑ¯³öÈ«²¿µÄ½á¹û
+##ï¿½ï¿½ï¿½ pageSize=0 ï¿½ï¿½ï¿½ï¿½ RowBounds.limit = 0 ï¿½Í»ï¿½ï¿½Ñ¯ï¿½ï¿½È«ï¿½ï¿½ï¿½Ä½ï¿½ï¿½
 #pagehelper.pageSizeZero=false
-##·ÖÒ³ºÏÀí»¯²ÎÊı
+##ï¿½ï¿½Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 #pagehelper.reasonable=true
-##Ö§³ÖÍ¨¹ı Mapper ½Ó¿Ú²ÎÊıÀ´´«µİ·ÖÒ³²ÎÊı
+##Ö§ï¿½ï¿½Í¨ï¿½ï¿½ Mapper ï¿½Ó¿Ú²ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½İ·ï¿½Ò³ï¿½ï¿½ï¿½ï¿½
 ##pagehelper.supportMethodsArguments= false
 ##pagehelper.params=count=countSql
-
-logging.config=classpath:log4j2.xml
