--- a/spring-boot-learn-filter-demo/pom.xml
+++ b/spring-boot-learn-filter-demo/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.iemylife.iot</groupId>
             <artifactId>webtoolkit</artifactId>
-            <version>0.4.0</version>
+            <version>0.4.1.BETA</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
@@ -34,6 +34,11 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.iemylife.iot</groupId>
+            <artifactId>heracules</artifactId>
+            <version>0.1.3</version>
         </dependency>
     </dependencies>
 
