添加spring boot test 测试学习项目

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>micro-service-users</module>
         <module>spring-boot-learn-rabbitmq-demo</module>
         <module>java-junit4-learn</module>
+        <module>spring-boot-learn-unittest-demo</module>
     </modules>
 
     <parent>
