--- a/java-async-completable-future/pom.xml
+++ b/java-async-completable-future/pom.xml
@@ -12,6 +12,14 @@
     <groupId>spring.boot.learn</groupId>
     <artifactId>java-async-completable-future</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
