aliyun日志消费者

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>spring-boot-learn-rabbitmq-demo</module>
         <module>java-junit4-learn</module>
         <module>spring-boot-learn-unittest-demo</module>
+        <module>spring-boot-learn-aliyun-log</module>
     </modules>
 
     <parent>
