--- a/spring-boot-learn-aliyun-log/src/main/resources/application.properties
+++ b/spring-boot-learn-aliyun-log/src/main/resources/application.properties
@@ -1,1 +1,30 @@
 logging.level.root=info
+
+aliyun.client.endpoint=cn-beijing.log.aliyuncs.com
+aliyun.client.access-key-id=LTAI7oxRGBQuiRu8
+aliyun.client.access-key-secret=ekiP6UQZYFqFrTf8DehPdlwjMebUpn
+
+# consumer group 的名字，不能为空，支持 [a-z][0-9] 和'_'，'-'，长度为3~63字符，只能以小写字母和数字开头结尾
+aliyun.loghub.mConsumerGroupName=iotAppLogConsumer
+# consumer 的名字，必须确保同一个 consumer group 下面的各个 consumer 不重名
+aliyun.loghub.mWorkerInstanceName=iotAppLogWorkerInstance
+# loghub 数据接口地址
+aliyun.loghub.mLogHubEndPoint=cn-beijing.log.aliyuncs.com
+# 项目名称
+aliyun.loghub.mProject=cztest
+# 日志库名称
+aliyun.loghub.mLogStore=czstore
+# 云账号的 access key id
+aliyun.loghub.mAccessId=LTAI7oxRGBQuiRu8
+# 云账号的 access key
+aliyun.loghub.mAccessKey=ekiP6UQZYFqFrTf8DehPdlwjMebUpn
+# 用于指出在服务端没有记录Shard的 checkpoint 的情况下应该从什么位置消费Shard，如果服务端保存了有效的 checkpoint 信息，那么这些取值不起任何作用， mCursorPosition 取值可以是 [BEGIN_CURSOR, END_CURSOR, SPECIAL_TIMER_CURSOR]中的一个，BEGIN_CURSOR 表示从Shard中的第一条数据开始消费，END_CURSOR 表示从Shard中的当前时刻的最后一条数据开始消费，SPECIAL_TIMER_CURSOR 和下面的 mLoghubCursorStartTime 配对使用，表示从特定的时刻开始消费数据。
+aliyun.loghub.mCursorPosition=0
+# 当 mCursorPosition 取值为 SPECIAL_TIMER_CURSOR 时，指定消费时间，单位是秒。
+aliyun.loghub.mLoghubCursorStartTime = 0
+#  轮询获取 LogHub 数据的时间间隔，间隔越小，抓取越快，单位是毫秒，默认是 DEFAULT_DATA_FETCH_INTERVAL_MS，建议时间间隔 200ms 以上。
+aliyun.loghub.mDataFetchIntervalMillis=200
+#  worker 向服务端汇报心跳的时间间隔，单位是毫秒，建议取值 10000ms。
+aliyun.loghub.mHeartBeatIntervalMillis=10000
+# 是否按序消费
+aliyun.loghub.mConsumeInOrder=true
