--- a/spring-boot-learn-aliyun-log/pom.xml
+++ b/spring-boot-learn-aliyun-log/pom.xml
@@ -24,9 +24,25 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.aliyun.openservices</groupId>
             <artifactId>aliyun-log</artifactId>
-            <version>0.6.6</version>
+            <version>0.6.8</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.protobuf</groupId>
+                    <artifactId>protobuf-java</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>loghub-client-lib</artifactId>
+            <version>0.6.8</version>
         </dependency>
     </dependencies>
 </project>
