--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>java-junit4-learn</module>
         <module>spring-boot-learn-unittest-demo</module>
         <module>spring-boot-learn-aliyun-log</module>
+        <module>java-security-learn</module>
     </modules>
 
     <parent>
