--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>spring-boot-learn-unittest-demo</module>
         <module>spring-boot-learn-aliyun-log</module>
         <module>java-security-learn</module>
+        <module>spring-boot-learn-rpc</module>
     </modules>
 
     <parent>
