添加rabbitmq多连接实例

--- a/spring-boot-learn-rabbitmq-demo/src/main/resources/application.properties
+++ b/spring-boot-learn-rabbitmq-demo/src/main/resources/application.properties
@@ -1,20 +1,24 @@
 spring.application.name=rabbitmq-hello
 
 # RabbitMQ
-spring.rabbitmq.first.addresses=rabbitmq-dev.chinanorth.cloudapp.chinacloudapi.cn:5672,rabbitmq-dev.chinanorth.cloudapp.chinacloudapi.cn:5673,rabbitmq-dev.chinanorth.cloudapp.chinacloudapi.cn:5674
+spring.rabbitmq.first.addresses=47.94.221.55:5672,47.94.221.55:5673,47.94.221.55:5674
 #spring.rabbitmq.first.port=5672
 spring.rabbitmq.first.username=wangpengfei
 spring.rabbitmq.first.password=wangpengfei
+spring.rabbitmq.first.vhost=mcweb
+spring.rabbitmq.listener.acknowledgeMode=MANUAL
 
 spring.rabbitmq.first.exchange=devstatus_exchange_test
 spring.rabbitmq.first.queue=mqttstatus_test
 spring.rabbitmq.first.routingKey=
 
 
-spring.rabbitmq.second.host=192.168.63.128
-spring.rabbitmq.second.port=5672
-spring.rabbitmq.second.username=admin
-spring.rabbitmq.second.password=admin
+spring.rabbitmq.second.addresses=47.94.221.55:5672,47.94.221.55:5673,47.94.221.55:5674
+#spring.rabbitmq.second.host=192.168.63.128
+#spring.rabbitmq.second.port=5672
+spring.rabbitmq.second.username=wangpengfei
+spring.rabbitmq.second.password=wangpengfei
+spring.rabbitmq.second.vhost=/
 
 spring.rabbitmq.second.exchange=devstatus_exchange_test_ss
 spring.rabbitmq.second.queue=mqttstatus_test_ss
