--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>spring-boot-learn-grpc</module>
         <module>spring-boot-learn-protobuf</module>
         <module>spring-boot-learn-grpc-client</module>
+        <module>spring-boot-learn-consul</module>
     </modules>
 
     <parent>
