添加Docker部署项目运行 demo

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>spring-boot-learn-protobuf</module>
         <module>spring-boot-learn-grpc-client</module>
         <module>spring-boot-learn-consul</module>
+        <module>spring-boot-learn-docker-demo</module>
     </modules>
 
     <parent>
