--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>spring-boot-learn-grpc-client</module>
         <module>spring-boot-learn-consul</module>
         <module>spring-boot-learn-docker-demo</module>
+        <module>spring-boot-learn-threadlocal</module>
     </modules>
 
     <parent>
