--- a/java-security-learn/pom.xml
+++ b/java-security-learn/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.55</version>
+        </dependency>
     </dependencies>
 
 
