添加多Redis连接实现

--- a/spring-boot-learn-redis-demo/src/main/resources/application.properties
+++ b/spring-boot-learn-redis-demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # Redis数据库索引（默认为0）
 custom.redis.properties.database=0
 # Redis服务器地址
-custom.redis.properties.host=192.168.12.76
+custom.redis.properties.host=localhost
 # Redis服务器连接端口
 custom.redis.properties.port=6379
 # Redis服务器连接密码（默认为空）
@@ -18,3 +18,4 @@ custom.redis.pool.max-idle=100
 custom.redis.pool.min-idle=10
 # 连接超时时间（毫秒）
 custom.redis.properties.timeout=1000
+
