添加异步方式写入日志的demo

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>spring-boot-learn-docker-demo</module>
         <module>spring-boot-learn-threadlocal</module>
         <module>spring-boot-learn-aop</module>
+        <module>spring-boot-learn-logging-demo</module>
     </modules>
 
     <parent>
