--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>spring-boot-learn-threadlocal</module>
         <module>spring-boot-learn-aop</module>
         <module>spring-boot-learn-logging-demo</module>
+        <module>spring-boot-learn-httpclient-demo</module>
     </modules>
 
     <parent>
