--- a/java-security-learn/pom.xml
+++ b/java-security-learn/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>bcpkix-jdk15on</artifactId>
             <version>1.55</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
     </dependencies>
 
 
