添加java集合学习项目，研究stream的使用方法

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>franklions-springMVC</module>
         <module>spring-boot-learn-rocketmq</module>
         <module>spring-boot-learn-socket</module>
+        <module>java-collection-learn</module>
     </modules>
 
     <parent>
