添加rabbitmq的延时消息实现方式

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>java-collection-learn</module>
         <module>java8-feature-learn</module>
         <module>java-to-excel-learn</module>
+        <module>rabbitmq-client-demo</module>
     </modules>
 
     <parent>
