添加将gradle的catches包导入到maven的功能

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>java8-feature-learn</module>
         <module>java-to-excel-learn</module>
         <module>rabbitmq-client-demo</module>
+        <module>export-gradle-to-maven</module>
     </modules>
 
     <parent>
